# kzyno

./: .cursorignore  .gitignore  .lintstagedrc  CONTRIBUTING.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
.husky/: post-commit  pre-commit  pre-push
anchor/kzyno/: Anchor.toml  package-lock.json  package.json
anchor/kzyno/helpers/: actions.ts  asserts.ts  pda.ts  users.ts
anchor/kzyno/programs/kzyno/: Cargo.toml
anchor/kzyno/programs/kzyno/src/: lib.rs
anchor/kzyno/scripts/: init.ts
anchor/kzyno/tests/: kzyno.ts  lp_profit_flow.spec.ts  mixed_five_users.spec.ts  simple.spec.ts
casino-program/: Cargo.toml
casino-program/scripts/: Cargo.toml  README.md  devnet_constants.json  initialize.rs  run.sh
casino-program/src/: casino_client.rs  error.rs  instruction.rs  lib.rs  state.rs
frontend/: .lintstagedrc  .prettierrc  package-lock.json  package.json  tsconfig.json
frontend/public/cards/: rename.sh
frontend/shared/anchor/idl/: kzyno.json
frontend/shared/anchor/types/: kzyno.ts
frontend/src/: middleware.ts
frontend/src/app/: commit-hash.ts  fonts.ts  globals.css  layout.tsx  page.tsx  x_logo.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/auth/challenge/: route.ts
frontend/src/app/api/submit-airdrop/: route.ts
frontend/src/app/arcade/: layout.tsx  page.tsx
frontend/src/app/arcade/baccarat/: page.tsx
frontend/src/app/arcade/coinflip/: page.tsx
frontend/src/app/arcade/dashboard/: page.tsx
frontend/src/app/arcade/horse-racing/: page.tsx
frontend/src/app/arcade/roulette/: page.tsx
frontend/src/app/arcade/russian-roulette/: page.tsx
frontend/src/app/casino-test/: page.tsx
frontend/src/app/components/: AirdropSignup.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/game/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/horse-racing/: page.tsx
frontend/src/app/providers/: WalletProvider.tsx
frontend/src/app/roulette/: page.tsx
frontend/src/components/: GameSetupModal.tsx  Header.tsx  SettingsMenu.tsx
frontend/src/components/casino/: BalanceDisplay.tsx  LiquidityModal.tsx  TradeModal.tsx  VaultHistory.tsx
frontend/src/contexts/: CasinoContext.tsx  SettingsContext.tsx
frontend/src/hooks/: useGameSetup.ts
frontend/src/lib/: casino-client.ts  constants.ts  kzyno.json  kzyno.ts  rate-limit.ts
frontend/src/lib/solana/: serialization.ts
src/app/: commit-hash.ts  globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/submit-airdrop/: route.ts
src/app/components/: AirdropSignup.tsx
src/lib/: rate-limit.ts
token/: metadata.json
(+8 files in other folders)
