[package]
name = "casino-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
