[package]
name = "casino-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "casino_program"

[[bin]]
name = "casino_cli"
path = "src/bin/casino_cli.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token-2022 = { version = "0.6.0", features = ["no-entrypoint"] }
thiserror = "1.0.0"
clap = { version = "4.4", features = ["derive"] }
solana-client = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8.5"
dotenv = "0.15.0"
anyhow = "1.0.75"
serde_json = "1.0"
spl-associated-token-account = "2.3.0"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
