[package]
name = "casino-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.17.0"
solana-sdk = "1.17.0"
solana-client = "1.17.0"
spl-token = "4.0.0"
spl-token-2022 = "0.6.0"
casino-program = { path = ".." }
tokio = { version = "1.28.0", features = ["full"] }
shellexpand = "3.1.0"
serde_json = "1.0.100"
spl-associated-token-account = "2.0.0"

[[bin]]
name = "initialize"
path = "initialize.rs"

[[bin]]
name = "create_token_mint"
path = "create_token_mint.rs" 