[package]
name = "kzyno"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kzyno"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang ={ version = "0.31.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = "0.31.1"
solana-program = "2.2.1"
spl-token-2022 = "8.0.1"

